src/test/deca/codegen/valid/MoinsInitFoisMoinsUn_f.deca
// Description:
//    tests simple multiplication
//
// Resultats:
//
//
// Historique:
//    cree le 21/01/2017
{
float x = 1.0;
print((-x)*(-1.0));
}
