src/test/deca/codegen/invalid/overflow_mul_f.deca
// Description:
//    mul trop grande
//
// Resultats:
//   renvoie une erreur
//
//
// Historique:
//    cree le 14/01/2017
{
float x;
x = 999999999999999.0 * 99999999999999.0 * 99999999999999.0;
print(x);
}